--- a/apps/santa-smog-api/Gemfile
+++ b/apps/santa-smog-api/Gemfile
@@ -2,6 +2,8 @@ source "https://rubygems.org"
 
 ruby "3.1.2"
 
+gem 'paystack', '~> 0.1.10'
+
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.1.3", ">= 7.1.3.2"
 
