--- a/apps/santa-smog-api/Gemfile
+++ b/apps/santa-smog-api/Gemfile
@@ -13,6 +13,9 @@ gem "sqlite3", "~> 1.4"
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", ">= 5.0"
 
+# Support pg as the database for Active Record in production
+gem 'pg', '~> 1.5', '>= 1.5.6'
+
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
 
